# jank

./: .gitignore  AGENTS.md  AGENTS_CONTEXT.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PROMPTS.md  WASM_CLOJURE_LIBS_PLAN.md  todo.md
compiler+runtime/: .gitignore  CI_RELEASE_GC_FAILURE_FIX_PLAN.md  CLAUDE.md  CMakeLists.txt  NREPL_NS_CRASH_INVESTIGATION.md  ODR_FIX_PLAN.md  WASM_BUILD_PLAN.md  WASM_CLANG_REPL_SETUP.md  WASM_COMPILER_PLAN.md  WASM_CPP_INTEROP_PLAN.md  WASM_EVAL_STRATEGIES.md  WASM_FIXES_PLAN.md  WASM_SESSION_NOTES.md
compiler+runtime/.ccache/0/: stats
compiler+runtime/.ccache/0/0/: 37k6o8p5aagq87mcfianij6pef21bsgR  3f426kehgi9oiuh1mjnlj19p7b6e3q0M  5993kl1fh1ogo3q8l2qfdck53giombcM  7a94dm7g72g7ulmcp8e8d61vdreimrkM  7fjb3f90487s362q3ic1vniic5ab97aM
compiler+runtime/.ccache/0/1/: 10q19ouk9pnejomnvv0fe7fjir89ivqM  11t6l3bk08rkj96tiae7qb6vcfc4qv8R  92s6u67v0a7k7vghstor0glv85bfdngM
compiler+runtime/.ccache/0/2/: 19f0agti3pv3ippl9oe7v3cdukick4sM  40hpv0ioso335rv7qto6p39jv40damqR  636e0lqggtsu0tql22invr02sn9prq0R  8bk0ioolhvepavmgaol9d4k1g6kcdhaM  a83n6qbdjkjgtolbvq72ak2art3aeo8M  c11tdeiguadfnv3r02dor8ob4ods2uoM  d2qoc4u7utq2cq1neh1v3j4mctl1q4eM
compiler+runtime/.ccache/0/3/: 2aaucb9301ee2v6c7914rf566sfiv5mR  2fgh1jouudhfanscsnvb9d6bqtfcphiM  3fhh21us5rjr0i10rvfomre03bi4b2aM  84eh9f057gsme7v1vniink3pas3h75aR  8c7t787aqoef3rnsgfb4tukdlhv0ekoR
compiler+runtime/.ccache/0/4/: 075vjtjhk33gujalt1fe9tpsrm4g8i4R  58121kv5768bf7josf1dp4jagpcm0g2R  96ujfe9qigh5cc2o3rjhh41q8k94738R  bdluqthldjf8anu2o6ugrf85t90kcbsR  eevo8re79fusom8162aioblqhsmbn4aM  f0jdcsm42efg5aj74b1no18q5tmj95qR
compiler+runtime/.ccache/0/5/: 24u1bucijtpnlck9jac1f2gbfl3ohssR  474pkm3dm9j8reijticab06nm3p8s6aR  5d390csh9saui723q3uo8hlh5kt7st6M  b2ki63hflf57fj42orr1dektf4o9ruoM
compiler+runtime/.ccache/0/6/: 13uofelai2kfnm98eotbknm027ormnuM  5035p468u3h5aba34ia11cjli0sf4j2R  5eatcmits4belt83ib3nblf1kormkamM  84acgqh9etnum0clsr9bruf30qdkul6M
compiler+runtime/.ccache/0/7/: 01nk1jcne8bv5okdlqgpp2g3cfpgmhcM  54f8pod8i3lj3sutpk6vidu35gk89akM  5ffut8vftudokcrkltdi8trvm78j1vgR  6cm8irppja7bj0bm3ut257el10rh3loR  9bv4ftb65561hh1arargoo3crr2e3koR
compiler+runtime/.ccache/0/8/: 203j8ra1dp8mueh6r3psfh4gk4q68b8R  26a66v6vpheil8useo3eed5ncuiue4gM  481p4r3vbaleeo054ess3psqf6pfn5qR  6491pr47a8kbo3bf4tt5pdksjanpe58R  b0kg8brqj9m1813asmpvj8b19gmp774M
compiler+runtime/.ccache/0/9/: 26dakhsvjg6hmpim9runom6dphau7imR  (+1 more)
compiler+runtime/.ccache/1/: stats
compiler+runtime/.ccache/2/: stats
compiler+runtime/.ccache/3/: stats
compiler+runtime/.ccache/4/: stats
compiler+runtime/.ccache/5/: stats
compiler+runtime/.ccache/6/: stats
compiler+runtime/.ccache/7/: stats
compiler+runtime/.ccache/8/: stats
compiler+runtime/.ccache/9/: stats
compiler+runtime/.ccache/a/: stats
compiler+runtime/.ccache/b/: stats
compiler+runtime/.ccache/c/: stats
compiler+runtime/.ccache/d/: stats
compiler+runtime/.ccache/e/: stats
compiler+runtime/.ccache/f/: stats
compiler+runtime/ai/: 20250101-001-merge-resolution-report.md  20250101-002-merge-progress-detailed.md  20250101-003-remaining-files-resolution-guide.md  20250101-004-merge-status-final.md  20250101-005-merge-remaining-work.md  20250101-006-merge-progress.md  20250101-007-merge-final-status.md  20250101-008-COMPLETION-REPORT.md  20250101-009-ci-aot-cache-fix.md  20250101-010-jank-phase-system-deep-dive.md  20251129-001-nrepl-stack-overflow-fix.md  20251129-002-c-header-completion-fix.md  20251129-003-nested-member-autocompletion.md  20251129-004-safe-member-enumeration.md  20251129-005-native-header-functions-namespace-fix.md  20251129-006-native-header-functions-auto-ns-search.md  20251129-007-noload-lookups-for-complex-classes.md  20251129-008-class-level-scope-and-this-param.md  20251129-009-docstring-for-member-methods.md  20251129-010-namespace-display-fix.md  20251129-011-flecs-wasm-integration.md  20251129-012-wasm-export-and-stack-fixes.md  20251130-001-aot-source-functions.md  20251130-001-flecs-wasm-static-linking.md  20251130-002-hot-reload-clang-tidy-fixes.md  20251130-002-native-header-wasm-support-plan.md  20251130-003-native-header-wasm-implementation.md  20251130-004-obj-cli-option.md  20251130-005-native-obj-emscripten-bundle.md  20251130-006-unified-native-lib-loading-plan.md  20251130-007-wasm-native-header-includes.md  20251130-008-ci-fixes-plan.md  20251130-009-nrepl-type-info-fixes.md  20251130-010-ci-fix-static-analysis-and-infinity.md  20251130-010-ci-fixes.md  20251130-011-c-header-global-function-completion.md  20251201-001-c-header-macros-and-fixes.md  20251201-001-function-like-macros.md  20251202-001-fix-cpp-value-call-not-callable.md  20251202-002-fix-var-source-location-nrepl.md  (+146 more)
compiler+runtime/cmake/: ios-simulator-toolchain.cmake  toolchain-ios-simulator.cmake  toolchain-ios.cmake
compiler+runtime/cmake/dependency/: bdwgc.cmake
compiler+runtime/doc/: BOEHM_GC_THREADING.md
compiler+runtime/ios/: jank-jit.entitlements
compiler+runtime/src/cpp/: compile_server_main.cpp  main.cpp
compiler+runtime/test/cpp/: main.cpp
compiler+runtime/tools/: ios-eval-cli.cpp  ios-eval.el
compiler+runtime/wasm-examples/: .gitignore  README.md  README_jank2wasm.md  WASM_COMPILATION_STATUS.md  WASM_SUCCESS.md  basic.jank  compile_for_wasm.sh  compile_jank_to_wasm.sh  eita.jank  eita2.jank  eita3.jank  eita_simple.jank  gen_wasm_cpp.py  greetings.jank  hello.jank  hello_generated.cpp  hello_jank_wasm.cpp  hello_simple.html  hello_simple_wasm.cpp  hello_wasm.cpp  hello_wasm.html  index.html  interop.jank  jank2wasm.sh  jank_demo.cpp  jank_demo.html  jank_execute.cpp  jank_execute.html  loop_test.jank  math.jank  minimal.jank  minimal_jank_runtime.hpp  native_call.jank  output.cpp  simple.cpp  simple.jank  simple_test.jank  test-compile.sh  test_all_libs.jank  test_clojure_test.jank  (+2 more)
compiler+runtime/wasm-examples/browser/: hello.jank
wasm-clang-interpreter-test/minimal-test/: CMakeLists.txt  CompilerModule.cpp  index.html
wasm-llvm-examples/: CMakeLists.txt  PHASE_0_RESULTS.md  README.md  test_interpreter.cpp  test_repl.cpp
(+1315 files in other folders)
